chore: stabilize MVP backend contract