@@ -2,11 +2,11 @@ package com.delivery.api_gateway.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -20,22 +20,36 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
+    static final String DEFAULT_ALLOWED_ORIGINS = "http://localhost:5173,http://localhost:3000,"
+            + "http://localhost:4173,"
+            + "http://127.0.0.1:5173,http://127.0.0.1:3000,"
+            + "http://127.0.0.1:4173";
+
+    private final List<String> allowedOrigins;
+
+    public CorsConfig(@Value("${app.cors.allowed-origins:" + DEFAULT_ALLOWED_ORIGINS + "}") List<String> allowedOrigins) {
+        this.allowedOrigins = allowedOrigins.stream()
+                .map(String::trim)
+                .filter(origin -> !origin.isBlank())
+                .toList();
+        if (this.allowedOrigins.isEmpty()) {
+            throw new IllegalStateException("At least one CORS origin must be configured");
+        }
+    }
+
+    List<String> allowedOrigins() {
+        return allowedOrigins;
+    }
+
     @Bean
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration corsConfig = new CorsConfiguration();
         
         // ✅ Allow frontend origins
-        corsConfig.setAllowedOrigins(Arrays.asList(
-            "http://localhost:5173",     // Vite default
-            "http://localhost:3000",     // React default
-            "http://localhost:4200",     // Angular default
-            "http://localhost:8080",     // Vue default
-            "http://127.0.0.1:5173",
-            "http://127.0.0.1:3000"
-        ));
+        corsConfig.setAllowedOrigins(allowedOrigins);
         
         // ✅ Allow all HTTP methods
-        corsConfig.setAllowedMethods(Arrays.asList(
+        corsConfig.setAllowedMethods(List.of(
             "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
         ));
         
@@ -49,7 +63,7 @@ public class CorsConfig {
         corsConfig.setMaxAge(3600L);
         
         // ✅ Expose headers to frontend
-        corsConfig.setExposedHeaders(Arrays.asList(
+        corsConfig.setExposedHeaders(List.of(
             "Authorization",
             "X-User-Id", 
             "X-Role",
